tried the language change for one line

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -2,5 +2,7 @@
   "hello": "Hello",
   "logout": "Logout",
   "name": "Name",
-  "farmer_assist": "Farmer Assist"
+  "farmer_assist": "Farmer Assist",
+  "welcome_msg" : "Welcome back, Farmer!"
+
 }
