selecting language before landing page, login, signin

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -3,6 +3,38 @@
   "logout": "Logout",
   "name": "Name",
   "farmer_assist": "Farmer Assist",
-  "welcome_msg" : "Welcome back, Farmer!"
-
+  "welcome_msg": "Welcome back, Farmer!",
+  "landing_subtitle": "Your smart companion for climate prediction, market analysis, and storage solutions",
+  "market_predictions": "Market Predictions",
+  "cold_storage_info": "Cold Storage Info",
+  "climate_details": "Climate Details",
+  "sign_up": "Sign Up",
+  "create_account": "Create Account",
+  "fill_details": "Fill in your details to get started",
+  "enter_full_name": "Enter your full name",
+  "full_name": "Full Name",
+  "please_enter_name": "Please enter your name",
+  "enter_email": "Enter your email",
+  "email": "Email",
+  "please_enter_email": "Please enter your email",
+  "please_enter_valid_email": "Please enter a valid email",
+  "enter_phone": "Enter your phone number",
+  "phone_number": "Phone Number",
+  "please_enter_phone": "Please enter your phone number",
+  "please_enter_valid_phone": "Please enter a valid phone number",
+  "enter_password": "Enter your password",
+  "password": "Password",
+  "please_enter_password": "Please enter your password",
+  "password_min_length": "Password must be at least 6 characters",
+  "confirm_password": "Confirm your password",
+  "confirm_password_label": "Confirm Password",
+  "please_confirm_password": "Please confirm your password",
+  "passwords_not_match": "Passwords do not match",
+  "already_have_account": "Already have an account? ",
+  "login": "Login",
+  "login_failed": "Login failed",
+  "welcome_back": "Welcome Back!",
+  "sign_in_continue": "Sign in to continue to your account",
+  "forgot_password": "Forgot Password?",
+  "dont_have_account": "Don't have an account? "
 }
