--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -1,7 +1,40 @@
 {
   "hello": "नमस्ते",
-  "logout": "लॉग आउट",
+  "logout": "लॉगआउट",
   "name": "नाम",
   "farmer_assist": "किसान सहायक",
-  "welcome_msg" : "फिर से स्वागत है, किसान जी!"
+  "welcome_msg": "किसान, आपका स्वागत है!",
+  "landing_subtitle": "जलवायु पूर्वानुमान, बाजार विश्लेषण और भंडारण समाधानों के लिए आपका स्मार्ट साथी",
+  "market_predictions": "बाजार की भविष्यवाणियाँ",
+  "cold_storage_info": "शीत भंडारण जानकारी",
+  "climate_details": "जलवायु विवरण",
+  "sign_up": "साइन अप",
+  "create_account": "खाता बनाएँ",
+  "fill_details": "शुरू करने के लिए अपनी जानकारी भरें",
+  "enter_full_name": "अपना पूरा नाम दर्ज करें",
+  "full_name": "पूरा नाम",
+  "please_enter_name": "कृपया अपना नाम दर्ज करें",
+  "enter_email": "अपना ईमेल दर्ज करें",
+  "email": "ईमेल",
+  "please_enter_email": "कृपया अपना ईमेल दर्ज करें",
+  "please_enter_valid_email": "कृपया एक वैध ईमेल दर्ज करें",
+  "enter_phone": "अपना फोन नंबर दर्ज करें",
+  "phone_number": "फोन नंबर",
+  "please_enter_phone": "कृपया अपना फोन नंबर दर्ज करें",
+  "please_enter_valid_phone": "कृपया एक वैध फोन नंबर दर्ज करें",
+  "enter_password": "अपना पासवर्ड दर्ज करें",
+  "password": "पासवर्ड",
+  "please_enter_password": "कृपया अपना पासवर्ड दर्ज करें",
+  "password_min_length": "पासवर्ड कम से कम 6 अक्षरों का होना चाहिए",
+  "confirm_password": "अपना पासवर्ड पुष्टि करें",
+  "confirm_password_label": "पासवर्ड की पुष्टि",
+  "please_confirm_password": "कृपया अपना पासवर्ड पुष्टि करें",
+  "passwords_not_match": "पासवर्ड मेल नहीं खाते",
+  "already_have_account": "पहले से खाता है? ",
+  "login": "लॉगिन",
+  "login_failed": "लॉगिन विफल",
+  "welcome_back": "वापस स्वागत है!",
+  "sign_in_continue": "अपने खाते में जारी रखने के लिए साइन इन करें",
+  "forgot_password": "पासवर्ड भूल गए?",
+  "dont_have_account": "खाता नहीं है? "
 }
