--- a/assets/lang/te.json
+++ b/assets/lang/te.json
@@ -1,7 +1,40 @@
 {
   "hello": "హలో",
-  "logout": "లాగ్ అవుట్",
+  "logout": "లాగౌట్",
   "name": "పేరు",
-  "farmer_assist": "రైతు సహాయం",
-  "welcome_msg" : "మళ్లీ స్వాగతం, రైతు గారూ!"
+  "farmer_assist": "కిసాన్ సహాయక",
+  "welcome_msg": "కిసాన్, స్వాగతం తిరిగి!",
+  "landing_subtitle": "కాలవారం అంచనా, మార్కెట్ విశ్లేషణ మరియు నిల్వా పరిష్కారాల కోసం మీ ఇంటెలిజెంట్ సహచరుడు",
+  "market_predictions": "మార్కెట్ అంచనాలు",
+  "cold_storage_info": "కోల్డ్ స్టోరేజ్ సమాచారం",
+  "climate_details": "కాలవారం వివరాలు",
+  "sign_up": "సైన్ అప్",
+  "create_account": "ఖాతా సృష్టించండి",
+  "fill_details": "ప్రారంభించడానికి మీ వివరాలను నింపండి",
+  "enter_full_name": "మీ పూర్తి పేరు నమోదు చేయండి",
+  "full_name": "పూర్తి పేరు",
+  "please_enter_name": "దయచేసి మీ పేరును నమోదు చేయండి",
+  "enter_email": "మీ ఈమెయిల్ నమోదు చేయండి",
+  "email": "ఈమెయిల్",
+  "please_enter_email": "దయచేసి మీ ఈమెయిల్ నమోదు చేయండి",
+  "please_enter_valid_email": "దయచేసి సరైన ఈమెయిల్ నమోదు చేయండి",
+  "enter_phone": "మీ ఫోన్ నంబర్ నమోదు చేయండి",
+  "phone_number": "ఫోన్ నంబర్",
+  "please_enter_phone": "దయచేసి మీ ఫోన్ నంబర్ నమోదు చేయండి",
+  "please_enter_valid_phone": "దయచేసి సరైన ఫోన్ నంబర్ నమోదు చేయండి",
+  "enter_password": "మీ పాస్‌వర్డ్ నమోదు చేయండి",
+  "password": "పాస్‌వర్డ్",
+  "please_enter_password": "దయచేసి మీ పాస్‌వర్డ్ నమోదు చేయండి",
+  "password_min_length": "పాస్‌వర్డ్ కనీసం 6 అక్షరాలు ఉండాలి",
+  "confirm_password": "మీ పాస్‌వర్డ్‌ని నిర్ధారించండి",
+  "confirm_password_label": "పాస్‌వర్డ్ నిర్ధారణ",
+  "please_confirm_password": "దయచేసి మీ పాస్‌వర్డ్‌ని నిర్ధారించండి",
+  "passwords_not_match": "పాస్‌వర్డ్‌లు సరిపోవు",
+  "already_have_account": "ఇప్పటికే ఖాతా ఉందా? ",
+  "login": "లాగిన్",
+  "login_failed": "లాగిన్ విఫలమైంది",
+  "welcome_back": "స్వాగతం తిరిగి!",
+  "sign_in_continue": "మీ ఖాతాకు కొనసాగడానికి సైన్ ఇన్ చేయండి",
+  "forgot_password": "పాస్‌వర్డ్ మర్చిపోయారా?",
+  "dont_have_account": "ఖాతా లేదా? "
 }
