added the bottom icons bar

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -36,5 +36,83 @@
   "welcome_back": "Welcome Back!",
   "sign_in_continue": "Sign in to continue to your account",
   "forgot_password": "Forgot Password?",
-  "dont_have_account": "Don't have an account? "
+  "dont_have_account": "Don't have an account? ",
+  "argonxt": "ArgoNXT",
+  "menu": "Menu",
+  "translate": "Translate",
+  "about": "About",
+  "help": "Help",
+  "logout": "Logout",
+  "about_title": "About",
+  "about_content": "This is Farmer Assist, an application integrated with AI models for weather prediction, market prediction, and cold storage availability. It empowers farmers with data-driven decisions, reduces crop losses, improves market linkage, and provides timely weather updates for effective planning.",
+  "help_title": "Help & FAQs",
+  "contact": "Contact",
+  "faqs": "FAQs",
+  "faq_language": "Q: How to change language?\nA: Click Translate and select.",
+  "faq_market": "Q: How to view market predictions?\nA: Go to Market section.",
+  "faq_storage": "Q: How to check cold storage availability?\nA: Visit Cold Storage section.",
+  "logout_title": "Logout",
+  "logout_confirm": "Are you sure you want to logout?",
+  "cancel": "Cancel",
+  "close": "Close",
+  "features": "Features",
+  "market_prediction": "Market Prediction",
+  "market_prediction_desc": "Get accurate crop price predictions based on market trends and historical data",
+  "cold_storage": "Cold Storage",
+  "cold_storage_desc": "Find nearby storage facilities and compare pricing options",
+  "climate_details": "Climate Details",
+  "climate_details_desc": "Access detailed weather forecasts and climate change predictions",
+  "quick_stats": "Quick Stats",
+  "todays_weather": "Today's Weather",
+  "market_status": "Market Status",
+  "storage_available": "Storage Available",
+  "manage_farm": "Manage your farm with intelligent predictions and insights",
+
+  "today": "Today",
+  "7_days": "7 Days",
+  "30_days": "30 Days",
+  "weather_forecast": "Weather Forecast",
+  "climate_insights": "Climate Insights",
+  "partly_cloudy": "Partly Cloudy",
+  "humidity": "Humidity",
+  "wind": "Wind",
+  "pressure": "Pressure",
+  "tomorrow": "Tomorrow",
+  "sunny": "Sunny",
+  "rainy": "Rainy",
+  "day_3": "Day 3",
+  "day_5": "Day 5",
+  "thunderstorm": "Thunderstorm",
+  "monsoon_prediction": "Monsoon Prediction",
+  "monsoon_arrival_early": "Monsoon is expected to arrive 2 days earlier than usual",
+  "temperature_trend": "Temperature Trend",
+  "temperature_higher": "Temperatures are 2°C higher than seasonal average",
+  "crop_recommendation": "Crop Recommendation",
+  "rice_cultivation_ideal": "Ideal conditions for rice cultivation in the next 2 weeks",
+  "weather_alert": "Weather Alert",
+  "heavy_rainfall_alert": "Heavy rainfall expected on July 12-13",
+  "select_crop": "Select Crop",
+  "choose_crop": "Choose a crop",
+  "price_prediction_for": "Price Prediction for {0}",
+  "current_price": "Current Price",
+  "predicted_price_7_days": "Predicted Price (7 days)",
+  "predicted_price_30_days": "Predicted Price (30 days)",
+  "price_trend": "Price Trend",
+  "upward": "Upward",
+  "market_insights": "Market Insights",
+  "high_demand_expected": "High Demand Expected",
+  "demand_increase": "Demand for {0} is expected to increase by {1} next week",
+  "weather_impact": "Weather Impact",
+  "monsoon_affect_supply": "Monsoon predictions may affect supply in northern regions",
+  "transport_costs": "Transport Costs",
+  "transport_costs_stable": "Transportation costs are stable this month",
+  "select_location": "Select Location",
+  "choose_location": "Choose a location",
+  "available_storage_facilities": "Available Storage Facilities",
+  "price_comparison": "Price Comparison",
+  "average_price": "Average Price",
+  "lowest_price": "Lowest Price",
+  "highest_price": "Highest Price",
+  "recommended_price": "Recommended"
+
 }
