--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -36,5 +36,84 @@
   "welcome_back": "वापस स्वागत है!",
   "sign_in_continue": "अपने खाते में जारी रखने के लिए साइन इन करें",
   "forgot_password": "पासवर्ड भूल गए?",
-  "dont_have_account": "खाता नहीं है? "
+  "dont_have_account": "खाता नहीं है? ",
+  "argonxt": "ArgoNXT",
+  "menu": "मेनू",
+  "translate": "अनुवाद",
+  "about": "के बारे में",
+  "help": "सहायता",
+  "logout": "लॉगआउट",
+  "about_title": "के बारे में",
+  "about_content": "यह फार्मर असिस्ट है, जो मौसम की भविष्यवाणी, बाजार की भविष्यवाणी और कोल्ड स्टोरेज उपलब्धता के लिए AI मॉडलों के साथ एकीकृत एक एप्लिकेशन है। यह किसानों को डेटा-आधारित निर्णय लेने में सक्षम बनाता है, फसल के नुकसान को कम करता है, बाजार लिंकेज में सुधार करता है और प्रभावी योजना के लिए समय पर मौसम अपडेट प्रदान करता है।",
+  "help_title": "सहायता और FAQs",
+  "contact": "संपर्क",
+  "faqs": "FAQs",
+  "faq_language": "प्रश्न: भाषा कैसे बदलें?\nउत्तर: अनुवाद पर क्लिक करें और चुनें।",
+  "faq_market": "प्रश्न: बाजार की भविष्यवाणियाँ कैसे देखें?\nउत्तर: बाजार अनुभाग पर जाएँ।",
+  "faq_storage": "प्रश्न: कोल्ड स्टोरेज उपलब्धता कैसे चेक करें?\nउत्तर: कोल्ड स्टोरेज अनुभाग पर जाएँ।",
+  "logout_title": "लॉगआउट",
+  "logout_confirm": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
+  "cancel": "रद्द करें",
+  "close": "बंद करें",
+  "features": "फीचर्स",
+  "market_prediction": "बाजार भविष्यवाणी",
+  "market_prediction_desc": "बाजार के रुझानों और ऐतिहासिक डेटा के आधार पर सटीक फसल मूल्य भविष्यवाणियाँ प्राप्त करें",
+  "cold_storage": "कोल्ड स्टोरेज",
+  "cold_storage_desc": "निकटवर्ती भंडारण सुविधाएँ खोजें और मूल्य विकल्पों की तुलना करें",
+  "climate_details": "जलवायु विवरण",
+  "climate_details_desc": "विस्तृत मौसम पूर्वानुमान और जलवायु परिवर्तन भविष्यवाणियों तक पहुँच प्राप्त करें",
+  "quick_stats": "त्वरित आँकड़े",
+  "todays_weather": "आज का मौसम",
+  "market_status": "बाजार की स्थिति",
+  "storage_available": "भंडारण उपलब्ध",
+  "manage_farm": "बुद्धिमान भविष्यवाणियों और अंतर्दृष्टि के साथ अपने खेत का प्रबंधन करें",
+
+  "today": "आज",
+  "7_days": "7 दिन",
+  "30_days": "30 दिन",
+  "weather_forecast": "मौसम का पूर्वानुमान",
+  "climate_insights": "जलवायु अंतर्दृष्टि",
+  "partly_cloudy": "आंशिक रूप से बादल",
+  "humidity": "नमी",
+  "wind": "हवा",
+  "pressure": "दबाव",
+  "tomorrow": "कल",
+  "sunny": "धूप",
+  "rainy": "बरसात",
+  "day_3": "तीसरा दिन",
+  "day_5": "पांचवां दिन",
+  "thunderstorm": "आंधी",
+  "monsoon_prediction": "मानसून का पूर्वानुमान",
+  "monsoon_arrival_early": "मानसून सामान्य से 2 दिन पहले आने की संभावना है",
+  "temperature_trend": "तापमान का रुझान",
+  "temperature_higher": "तापमान मौसमी औसत से 2°C अधिक है",
+  "crop_recommendation": "फसल की सिफारिश",
+  "rice_cultivation_ideal": "अगले 2 सप्ताह में चावल की खेती के लिए आदर्श परिस्थितियाँ",
+  "weather_alert": "मौसम की चेतावनी",
+  "heavy_rainfall_alert": "12-13 जुलाई को भारी बारिश की संभावना",
+  "select_crop": "फसल चुनें",
+  "choose_crop": "फसल चुनें",
+  "price_prediction_for": "{0} के लिए मूल्य पूर्वानुमान",
+  "current_price": "वर्तमान मूल्य",
+  "predicted_price_7_days": "7 दिनों का अनुमानित मूल्य",
+  "predicted_price_30_days": "30 दिनों का अनुमानित मूल्य",
+  "price_trend": "मूल्य का रुझान",
+  "upward": "ऊपर की ओर",
+  "market_insights": "बाजार अंतर्दृष्टि",
+  "high_demand_expected": "उच्च मांग की उम्मीद",
+  "demand_increase": "{0} की मांग अगले सप्ताह {1} बढ़ने की उम्मीद है",
+  "weather_impact": "मौसम का प्रभाव",
+  "monsoon_affect_supply": "मानसून के पूर्वानुमान से उत्तरी क्षेत्रों में आपूर्ति प्रभावित हो सकती है",
+  "transport_costs": "परिवहन लागत",
+  "transport_costs_stable": "इस महीने परिवहन लागत स्थिर हैं",
+  "select_location": "स्थान चुनें",
+  "choose_location": "स्थान चुनें",
+  "available_storage_facilities": "उपलब्ध भंडारण सुविधाएँ",
+  "price_comparison": "मूल्य तुलना",
+  "average_price": "औसत मूल्य",
+  "lowest_price": "न्यूनतम मूल्य",
+  "highest_price": "सर्वाधिक मूल्य",
+  "recommended_price": "अनुशंसित मूल्य"
+
+
 }
