--- a/assets/lang/te.json
+++ b/assets/lang/te.json
@@ -36,5 +36,83 @@
   "welcome_back": "స్వాగతం తిరిగి!",
   "sign_in_continue": "మీ ఖాతాకు కొనసాగడానికి సైన్ ఇన్ చేయండి",
   "forgot_password": "పాస్‌వర్డ్ మర్చిపోయారా?",
-  "dont_have_account": "ఖాతా లేదా? "
+  "dont_have_account": "ఖాతా లేదా? ",
+  "argonxt": "ArgoNXT",
+  "menu": "మెనూ",
+  "translate": "అనువాదం",
+  "about": "గురించి",
+  "help": "సహాయం",
+  "logout": "లాగౌట్",
+  "about_title": "గురించి",
+  "about_content": "ఇది ఫార్మర్ అసిస్ట్, వాతావరణ అంచనా, మార్కెట్ అంచనా మరియు చల్లదన నిల్వ లభ్యత కోసం AI మోడల్‌లతో ఐక్యం చేయబడిన ఒక అనువర్తనం. ఇది రైతులకు డేటా-ఆధారిత నిర్ణయాలను అందిస్తుంది, పంట నష్టాలను తగ్గిస్తుంది, మార్కెట్ లింకేజ్‌ను మెరుగుపరుస్తుంది మరియు సమయసీమా వాతావరణ అప్‌డేట్‌లను సమర్థవంతమైన ప్రణాళిక కోసం అందిస్తుంది.",
+  "help_title": "సహాయం & FAQs",
+  "contact": "సంప్రదింపు",
+  "faqs": "FAQs",
+  "faq_language": "ప్రశ్న: భాషను ఎలా మార్చాలి?\nజవాబు: అనువాదం క్లిక్ చేసి ఎంచుకోండి.",
+  "faq_market": "ప్రశ్న: మార్కెట్ అంచనాలను ఎలా చూడాలి?\nజవాబు: మార్కెట్ విభాగానికి వెళ్ళండి.",
+  "faq_storage": "ప్రశ్న: చల్లదన నిల్వ లభ్యతను ఎలా చెక్ చేయాలి?\nజవాబు: చల్లదన నిల్వ విభాగానికి వెళ్ళండి.",
+  "logout_title": "లాగౌట్",
+  "logout_confirm": "మీరు లాగౌట్ చేయాలని ఖచ్చితంగా అనుకుంటున్నారా?",
+  "cancel": "రద్దు చేయు",
+  "close": "మూసివేయు",
+  "features": "ఫీచర్‌లు",
+  "market_prediction": "మార్కెట్ అంచనా",
+  "market_prediction_desc": "మార్కెట్ ట్రెండ్‌లు మరియు చారిత్రక డేటా ఆధారంగా ఖచ్చితమైన పంట ధర అంచనాలను పొందండి",
+  "cold_storage": "చల్లదన నిల్వ",
+  "cold_storage_desc": "సమీపంలోని నిల్వ సౌకర్యాలను కనుగొనండి మరియు ధర ఎంపికలను పోల్చండి",
+  "climate_details": "కాలవారం వివరాలు",
+  "climate_details_desc": "వివరణాత్మక వాతావరణ అంచనాలు మరియు కాలవారం మార్పు అంచనాలను పొందండి",
+  "quick_stats": "త్వరిత గణాంకాలు",
+  "todays_weather": "ఈ రోజు వాతావరణం",
+  "market_status": "మార్కెట్ స్థితి",
+  "storage_available": "నిల్వ లభ్యత",
+  "manage_farm": "బుద్ధిగల అంచనాలు మరియు ఆలోచనలతో మీ రైతు నిర్వహణను నిర్వహించండి",
+
+  "today": "ఈ రోజు",
+  "7_days": "7 రోజులు",
+  "30_days": "30 రోజులు",
+  "weather_forecast": "వాతావరణ అంచనా",
+  "climate_insights": "కాలవారం ఆలోచనలు",
+  "partly_cloudy": "పాక్షిక మేఘావృతం",
+  "humidity": "నీరు",
+  "wind": "గాలి",
+  "pressure": "పీడనం",
+  "tomorrow": "రేపు",
+  "sunny": "సూర్యపు",
+  "rainy": "వర్షం",
+  "day_3": "3వ రోజు",
+  "day_5": "5వ రోజు",
+  "thunderstorm": "తుఫాను",
+  "monsoon_prediction": "మాన్సూన్ అంచనా",
+  "monsoon_arrival_early": "మాన్సూన్ సాధారణం కంటే 2 రోజుల ముందు వచ్చే అవకాశం ఉంది",
+  "temperature_trend": "తాపన ధోరణి",
+  "temperature_higher": "తాపన సీజనల సగటు కంటే 2°C ఎక్కువ",
+  "crop_recommendation": "పంట సిఫార్సు",
+  "rice_cultivation_ideal": "తదుపరి 2 వారాల్లో బియ్యం పంటలకు అనువైన పరిస్థితులు",
+  "weather_alert": "వాతావరణ హెచ్చరిక",
+  "heavy_rainfall_alert": "జూలై 12-13 నాటికి భారీ వర్షాలు అంచనా",
+  "select_crop": "పంటను ఎంచుకోండి",
+  "choose_crop": "పంటను ఎంచుకోండి",
+  "price_prediction_for": "{0} కోసం ధర అంచనా",
+  "current_price": "ప్రస్తుత ధర",
+  "predicted_price_7_days": "7 రోజుల ధర అంచనా",
+  "predicted_price_30_days": "30 రోజుల ధర అంచనా",
+  "price_trend": "ధర ధోరణి",
+  "upward": "పెరుగుతున్న",
+  "market_insights": "మార్కెట్ ఆలోచనలు",
+  "high_demand_expected": "అధిక డిమాండ్ అంచనా",
+  "demand_increase": "{0} కోసం డిమాండ్ తదుపరి వారంలో {1} పెరుగుతుందని అంచనా",
+  "weather_impact": "వాతావరణ ప్రభావం",
+  "monsoon_affect_supply": "మాన్సూన్ అంచనాలు ఉత్తర ప్రాంతాలలో సరఫరాను ప్రభావితం చేయవచ్చు",
+  "transport_costs": "పరిశోధన ఖర్చులు",
+  "transport_costs_stable": "ఈ నెల రవాణా ఖర్చులు స్థిరంగా ఉన్నాయి",
+  "select_location": "స్థానాన్ని ఎంచుకోండి",
+  "choose_location": "స్థానాన్ని ఎంచుకోండి",
+  "available_storage_facilities": "అందుబాటులో ఉన్న నిల్వ సౌకర్యాలు",
+  "price_comparison": "ధర పోలిక",
+  "average_price": "సగటు ధర",
+  "lowest_price": "కనిష్ట ధర",
+  "highest_price": "అత్యధిక ధర",
+  "recommended_price": "సిఫార్సు చేయబడిన ధర"
+
 }
